[metadata]
name = Flask-Liquid
version = attr: flask_liquid.__version__
description = A Flask extension for rendering Liquid templates.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/jg-rp/flask-liquid
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
project_urls = 
    Documentation = https://jg-rp.github.io/liquid/guides/flask-liquid
    Issue Tracker = https://github.com/jg-rp/flask-liquid/issues
    Source Code = https://github.com/jg-rp/flask-liquid
    Change Log = https://github.com/jg-rp/flask-liquid/blob/main/CHANGES.rst

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    flask>=1.0
    MarkupSafe>=2.0.0
    python-liquid>=1.1.0

[options.packages.find]
exclude =
    tests*

[mypy]
files = flask_liquid
python_version = 3.10
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
local_partial_types = True
no_implicit_reexport = True
strict = True
warn_redundant_casts = True
warn_unused_configs = True
warn_unused_ignores = True
warn_return_any = True
warn_unreachable = True
exclude = build

[pylint.messages control]
disable =
    missing-module-docstring,
    missing-class-docstring,
    missing-function-docstring,
    too-few-public-methods,
    import-outside-toplevel,
    assigning-non-slot
    
[pylint.basic]
good-names =
    e,
    fd,

[flake8]
max-line-length = 88
select = B, E, F, W, B9, ISC
ignore = E203, E501, W503

[coverage:run]
source = django_liquid
omit = 
    */.local/*
    .tox/*